[package]
name = "k12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.35", features = ["cmake-build"] }
clap = "2.33.3"
chrono = "0.4.19"
chrono-english = "0.1.7"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"